--- a/.github/workflows/core_framework.yml
+++ b/.github/workflows/core_framework.yml
@@ -12,6 +12,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up Java (Temurin 17)
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Download and Install Maven
+        shell: powershell
+        run: |
+          $ErrorActionPreference = 'Stop'
+          Invoke-WebRequest -Uri https://downloads.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.zip -OutFile maven.zip
+          Expand-Archive -Path maven.zip -DestinationPath "$env:RUNNER_TEMP\maven"
+          $mavenPath = "$env:RUNNER_TEMP\maven\apache-maven-3.9.6\bin"
+          echo "##[add-path]$mavenPath"
+
+      - name: Verify Maven Installation
+        run: mvn -v
+
       - name: Build with Maven and execute scripts
         run: mvn clean install test -DtestSuite="MobileSuite.xml" --file pom.xml
         continue-on-error: true
