--- a/.github/workflows/core_framework.yml
+++ b/.github/workflows/core_framework.yml
@@ -22,7 +22,7 @@ jobs:
         shell: powershell
         run: |
           $ErrorActionPreference = 'Stop'
-          Invoke-WebRequest -Uri https://downloads.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.zip -OutFile maven.zip
+          Invoke-WebRequest -Uri https://archive.apache.org/dist/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.zip -OutFile maven.zip
           Expand-Archive -Path maven.zip -DestinationPath "$env:RUNNER_TEMP\maven"
           $mavenPath = "$env:RUNNER_TEMP\maven\apache-maven-3.9.6\bin"
           echo "##[add-path]$mavenPath"
