--- a/.github/workflows/core_framework.yml
+++ b/.github/workflows/core_framework.yml
@@ -25,7 +25,7 @@ jobs:
           Invoke-WebRequest -Uri https://archive.apache.org/dist/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.zip -OutFile maven.zip
           Expand-Archive -Path maven.zip -DestinationPath "$env:RUNNER_TEMP\maven"
           $mavenPath = "$env:RUNNER_TEMP\maven\apache-maven-3.9.6\bin"
-          echo "##[add-path]$mavenPath"
+          "$mavenPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Verify Maven Installation
         run: mvn -v
